--- a/01-clases/app/src/main/AndroidManifest.xml
+++ b/01-clases/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme._2024ASWGR2CBEM"
         tools:targetApi="31">
         <activity
+            android:name=".BListView"
+            android:exported="false" />
+        <activity
+            android:name=".AcicloVida"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
