--- a/01-clases/app/src/main/AndroidManifest.xml
+++ b/01-clases/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme._2024ASWGR2CBEM"
         tools:targetApi="31">
+        <activity
+            android:name=".HFirebaseUIAuth"
+            android:exported="false" />
         <activity
             android:name=".GGoogleMapsActivity"
             android:exported="false" />
